# python-quickstart-repo

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  mypy.ini  pyproject.toml  remote-services-config.yaml
.github/workflows/: Coverage.yml  auto-formatting.yml  ci.yml  coverage.yml  pre-commit-hooks.yml  release-bump.yml
python_quickstart_repo/: circle.py  config.py  data_model.py  health_reader.py  main.py  page_fetcher.py  postgresql_writer.py  square.py  status_writer.py
python_quickstart_repo/config/: config.py  kafka_consumer_config.py  kafka_producer_config.py  page_fetcher_config.py  postgresql_producer_config.py  program_launcher.py  sasl_security_protocol.py  yaml_config_reader.py
python_quickstart_repo/datamodels/: health_check_reply.py
python_quickstart_repo/healthcheck_consumers/: healthcheck_producer.py  kafka_healthcheck_consumer.py  postgresql_healthcheck_consumer.py
python_quickstart_repo/healthcheck_producers/: healthcheck_consumer.py  healthcheck_producer.py  kafka_healthcheck_consumer.py  postgresql_healthcheck_consumer.py
python_quickstart_repo/http_checkers/: page_fetcher.py
python_quickstart_repo/launcher/: program_launcher.py
scripts/: run_tests.sh
tests/: test_circle.py  test_square.py
tests/config/: test_kafka_consumer_config.py  test_kafka_producer_config.py
tests/healthcheck_producers/: test_healthcheck_producer.py
tests/http_checkers/: test_page_fetcher.py
tests/integration/: test_google_fetch.py  test_health_reader.py  test_kafka_to_postgresql.py  (+1 more)
(+7 files in other folders)
