[tool.poetry]
name = "python-quickstart-repo"
version = "0.1.0"
description = "A playground that shows how to use poetry and other tools for a well structured python project"
authors = ["eliax1996 <migliorelia@gmail.com>"]
readme = "README.md"
packages = [{ include = "python_quickstart_repo" }]

[tool.poetry.dependencies]
python = "^3.10"
kafka-python = "^2.0.2"
pydantic = "^1.10.4"
asyncpg = "^0.27.0"
aiokafka = "^0.8.0"
httpx = "^0.23.3"
aiostream = "^0.4.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"
asyncmock = "^0.4.2"
mock = "^5.0.1"
types-mock = "^5.0.0.2"
mypy = "^0.991"
pylint = "^2.15.10"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
